Fix: Container - apply new inner container class [ED-8392] (#19970)

--- a/assets/dev/scss/editor/_container.scss
+++ b/assets/dev/scss/editor/_container.scss
@@ -108,7 +108,7 @@
 	// Inner Container handle.
 	// TODO: Find a better solution.
 	& > &,
-	&__inner > &,
+	&-inner > &,
 	.elementor-widget & {
 
 		> .elementor-element-overlay {
