Revert "Tweak: Changed container class names to shorter names (markup changes!) [ED-8347] (#19962)"
This reverts commit b0905fc9ce81b1b896708a1336c7b832d6ef4388.

--- a/assets/dev/scss/frontend/widgets/divider.scss
+++ b/assets/dev/scss/frontend/widgets/divider.scss
@@ -137,8 +137,8 @@
 	direction: rtl;
 }
 
-.e-con,
-.e-con-inner {
+.e-container,
+.e-container__inner {
 
 	& > .elementor-widget-divider {
 		// Fix - Divider widget has undefined width and height issues inside the flex container (ED-7722).
