--- a/assets/dev/scss/frontend/widgets/spacer.scss
+++ b/assets/dev/scss/frontend/widgets/spacer.scss
@@ -5,12 +5,12 @@
 	}
 }
 
-.e-con {
+.e-container {
 	--container-widget-width: 100%;
 }
 
-.e-con,
-.e-con-inner {
+.e-container,
+.e-container__inner {
 
 	& > .elementor-widget-spacer {
 		width: var( --container-widget-width, var( --spacer-size ) );
