--- a/assets/dev/scss/frontend/widgets/accordion.scss
+++ b/assets/dev/scss/frontend/widgets/accordion.scss
@@ -89,8 +89,8 @@
 	}
 }
 
-.e-con,
-.e-con-inner {
+.e-container,
+.e-container__inner {
 
 	> .elementor-widget-accordion {
 		// Fix - Accordion widget disappears because the 'flex column' setting causes an undefined width inside the flex container (ED-7524).
