--- a/assets/dev/scss/frontend/_container.scss
+++ b/assets/dev/scss/frontend/_container.scss
@@ -1,4 +1,4 @@
-.e-container {
+.e-con {
 	// Set to initial values in order to avoid inheritance which might cause unexpected behavior.
 	--border-radius: 0;
 	--display: flex;
@@ -47,8 +47,8 @@
 	overflow: var( --overflow );
 	transition: var( --transition );
 
-	&--width-full,
-	& > .e-container__inner {
+	&-full-width,
+	& > .e-con-inner {
 		flex-direction: var( --flex-direction );
 		text-align: var( --text-align );
 		padding-top: var( --padding-top );
@@ -56,12 +56,12 @@
 	}
 
 	&,
-	& > .e-container__inner {
+	& > .e-con-inner {
 		display: var( --display );
 	}
 
 	// Set default values to the outer div of the boxed container.
-	&--width-boxed {
+	&-boxed {
 		flex-direction: column;
 		text-align: initial;
 		flex-wrap: initial;
@@ -71,7 +71,7 @@
 		gap: initial;
 	}
 
-	& > .e-container__inner {
+	& > .e-con-inner {
 		flex-wrap: var( --flex-wrap );
 		justify-content: var( --justify-content );
 		align-items: var( --align-items );
@@ -81,7 +81,7 @@
 		max-width: var( --content-width );
 		margin: 0 auto;
 		padding-inline: 0;
-		height: 100%;	
+		height: 100%;
 
 		// Set default values to the inner div of the boxed container.
 		flex-basis: initial;
@@ -160,7 +160,7 @@
 	}
 
 	&,
-	& > .e-container__inner {
+	& > .e-con-inner {
 
 		& > .elementor-widget {
 
@@ -174,7 +174,7 @@
 	.elementor & {
 
 		&,
-		& > .e-container__inner {
+		& > .e-con-inner {
 
 			// This was done to make sure that the widgets inside containers do not exceed the container's max width.
 			& > .elementor-widget {
@@ -185,7 +185,7 @@
 }
 
 @media ( max-width: $editor-screen-sm-max ) {
-	.e-container {
+	.e-con {
 		--width: 100%;
 		--flex-wrap: wrap;
 	}
