--- a/assets/dev/scss/frontend/_container.scss
+++ b/assets/dev/scss/frontend/_container.scss
@@ -172,7 +172,7 @@
 
 	// Hack with repeated classnames to increase the specificity.
 	.elementor.elementor &,
-	&.e-container > .e-con-inner {
+	&.e-con > .e-con-inner {
 
 		// This was done to make sure that the widgets inside containers do not exceed the container's max width.
 		& > .elementor-widget {
