Fix: Container Full Width values are disappearing after latest version update [ED-8468]

--- a/assets/dev/scss/frontend/_container.scss
+++ b/assets/dev/scss/frontend/_container.scss
@@ -47,7 +47,7 @@
 	overflow: var( --overflow );
 	transition: var( --transition );
 
-	&-full-width,
+	&-full,
 	& > .e-con-inner {
 		flex-direction: var( --flex-direction );
 		text-align: var( --text-align );
