--- a/assets/dev/scss/frontend/widgets/spacer.scss
+++ b/assets/dev/scss/frontend/widgets/spacer.scss
@@ -14,8 +14,8 @@
 
 	& > .elementor-widget-spacer {
 		width: var( --container-widget-width, var( --spacer-size ) );
-		align-self: stretch;
-		flex-shrink: 0;
+		--align-self: var( --container-widget-align-self, initial );
+		--flex-shrink: 0;
 
 		& > .elementor-widget-container {
 			height: 100%;
@@ -28,5 +28,9 @@
 				}
 			}
 		}
+	}
+
+	&.elementor-widget-empty .elementor-widget-container {
+		position: absolute;
 	}
 }
