--- a/assets/dev/scss/frontend/_container.scss
+++ b/assets/dev/scss/frontend/_container.scss
@@ -46,18 +46,18 @@
 	z-index: var( --z-index );
 	overflow: var( --overflow );
 	transition: var( --transition );
-	transform: perspective( var( --e-container-transform-perspective, none ) )
-		rotateZ( var( --e-container-transform-rotateZ, 0 ) )
-		rotateX( var( --e-container-transform-rotateX, 0 ) )
-		rotateY( var( --e-container-transform-rotateY, 0 ) )
-		translate( var( --e-container-transform-translate, 0 ) )
-		translateX( var( --e-container-transform-translateX, 0 ) )
-		translateY( var( --e-container-transform-translateY, 0 ) )
-		scaleX( calc( var( --e-container-transform-flipX, 1 ) * var( --e-container-transform-scaleX, var( --e-container-transform-scale, 1 ) ) ) )
-		scaleY( calc( var( --e-container-transform-flipY, 1 ) * var( --e-container-transform-scaleY, var( --e-container-transform-scale, 1 ) ) ) )
-		skewX( var( --e-container-transform-skewX, 0 ) )
-		skewY( var( --e-container-transform-skewY, 0 ) );
-	transform-origin: var( --e-container-transform-origin-y ) var( --e-container-transform-origin-x );
+	transform: perspective( var(--e-con-transform-perspective, none ) )
+		rotateZ( var(--e-con-transform-rotateZ, 0 ) )
+		rotateX( var(--e-con-transform-rotateX, 0 ) )
+		rotateY( var(--e-con-transform-rotateY, 0 ) )
+		translate( var(--e-con-transform-translate, 0 ) )
+		translateX( var(--e-con-transform-translateX, 0 ) )
+		translateY( var(--e-con-transform-translateY, 0 ) )
+		scaleX( calc( var(--e-con-transform-flipX, 1 ) * var(--e-con-transform-scaleX, var(--e-con-transform-scale, 1 ) ) ) )
+		scaleY( calc( var(--e-con-transform-flipY, 1 ) * var(--e-con-transform-scaleY, var(--e-con-transform-scale, 1 ) ) ) )
+		skewX( var(--e-con-transform-skewX, 0 ) )
+		skewY( var(--e-con-transform-skewY, 0 ) );
+	transform-origin: var(--e-con-transform-origin-y ) var(--e-con-transform-origin-x );
 
 	&-full,
 	& > .e-con-inner {
