--- a/modules/lazyload/assets/scss/frontend.scss
+++ b/modules/lazyload/assets/scss/frontend.scss
@@ -1,7 +1,10 @@
-body.e-lazyload [data-e-bg-lazyload]:not(.lazyloaded)>div {
-    backdrop-filter: blur(50px);
+body.e-lazyload [data-e-bg-lazyload]:not(.lazyloaded) {
+    background-size: cover; 
+    &>div {
+        backdrop-filter: blur(50px);
+    }
 }
 
-.lazyloaded {
+.lazyloaded, body.e-lazyload [data-e-bg-lazyload]:not(.lazyloaded ):first-of-type {
     background-image: var(--e-bg-lazyload) !important;
 }
