Fix: Nested Elements - cannot drag widget inside the tab to the outside [ED-7665]

--- a/assets/dev/scss/editor/navigator/navigator.scss
+++ b/assets/dev/scss/editor/navigator/navigator.scss
@@ -100,6 +100,10 @@ body {
 		transition: padding .5s linear;
 		overflow: hidden;
 
+		&[data-locked="true"] {
+			cursor: not-allowed;
+		}
+
 		&:not(.elementor-active) {
 
 			.elementor-navigator__element__list-toggle {
@@ -148,11 +152,6 @@ body {
 	}
 
 	&__element {
-
-		&[data-locked="true"] > .elementor-navigator__item {
-			cursor: not-allowed;
-		}
-
 		&.elementor-dragging-on-child {
 
 			> .elementor-navigator__elements {
