Tweak: Added Transform section to Advanced tab in Flexbox Container element [ED-6956] (#18803)
## PR Checklist
<!-- 
Please check if your PR fulfills the following requirements:
**Filling out the template is required.** Any pull request that does not
include enough information to be reviewed in a timely manner may be
closed at the maintainers' discretion.
 -->
- [ ] The commit message follows our guidelines:
https://github.com/elementor/elementor/blob/master/.github/CONTRIBUTING.md


## PR Type
What kind of change does this PR introduce?
<!-- Please check the one that applies to this PR using "x" with no
spaces eg: [x]. -->
- [ ] Bugfix
- [ ] Feature
- [ ] Code style update (formatting, local variables)
- [ ] Refactoring (no functional changes, no api changes)
- [ ] Build related changes
- [ ] CI related changes
- [ ] Documentation content changes
- [ ] Other... Please describe:

## Summary

This PR can be summarized in the following changelog entry:

*

## Description
An explanation of what is done in this PR

*

## Test instructions
This PR can be tested by following these steps:

*

## Quality assurance

- [ ] I have tested this code to the best of my abilities
- [ ] I have added unittests to verify the code works as intended
- [ ] Docs have been added / updated (for bug fixes / features)

Fixes #

--- a/assets/dev/scss/frontend/_container.scss
+++ b/assets/dev/scss/frontend/_container.scss
@@ -25,7 +25,6 @@
 	--position: relative;
 	--z-index: revert;
 	--overflow: visible;
-	--transition: 0;
 	--gap: var( --widgets-spacing, 20px ); // Use the gap from `Site Settings` or default to 20px.
 	--overlay-mix-blend-mode: initial;
 	--overlay-opacity: 1;
@@ -45,7 +44,19 @@
 	padding-right: var( --padding-right );
 	z-index: var( --z-index );
 	overflow: var( --overflow );
-	transition: var( --transition );
+	transition: background var(--background-transition, 0.3s), border var(--border-transition, 0.3s), box-shadow var(--border-transition, 0.3s), transform var(--e-con-transform-transition-duration, 0.4s);
+	transform: perspective( var(--e-con-transform-perspective, none ) )
+		rotateZ( var(--e-con-transform-rotateZ, 0 ) )
+		rotateX( var(--e-con-transform-rotateX, 0 ) )
+		rotateY( var(--e-con-transform-rotateY, 0 ) )
+		translate( var(--e-con-transform-translate, 0 ) )
+		translateX( var(--e-con-transform-translateX, 0 ) )
+		translateY( var(--e-con-transform-translateY, 0 ) )
+		scaleX( calc( var(--e-con-transform-flipX, 1 ) * var(--e-con-transform-scaleX, var(--e-con-transform-scale, 1 ) ) ) )
+		scaleY( calc( var(--e-con-transform-flipY, 1 ) * var(--e-con-transform-scaleY, var(--e-con-transform-scale, 1 ) ) ) )
+		skewX( var(--e-con-transform-skewX, 0 ) )
+		skewY( var(--e-con-transform-skewY, 0 ) );
+	transform-origin: var(--e-con-transform-origin-y) var(--e-con-transform-origin-x);
 
 	&-full,
 	& > .e-con-inner {
@@ -125,8 +136,12 @@
 		top: 0;
 		mix-blend-mode: var( --overlay-mix-blend-mode );
 		opacity: var( --overlay-opacity );
-		transition: var( --overlay-transition );
+		transition: var( --overlay-transition, 0.3s );
 		border-radius: var( --border-radius );
+	}
+
+	&::before {
+		transition: background var(--overlay-transition, 0.3s), border-radius var(--border-transition, 0.3s), opacity var(--overlay-transition, 0.3s);
 	}
 
 	> .elementor-background-video-container:before,
