--- a/modules/lazyload/assets/scss/frontend.scss
+++ b/modules/lazyload/assets/scss/frontend.scss
@@ -6,8 +6,8 @@ body.e-lazyload [data-e-bg-lazyload]:not(.lazyloaded) {
 }
 
 // TODO: Temp fix - Need to unify the background & lazy-load selectors.
-//  This fix accounts for the DOM experiment changes, that are already fixed in the background
-//  selector itself (which is the reason why we need to unify it).
+//  This fix accounts for the DOM experiment & motion fx changes, that are already fixed in the background
+//  selector itself (which is the reason we need to unify it).
 .lazyloaded:not( .elementor-motion-effects-element-type-background ),
 .lazyloaded > .elementor-motion-effects-container > .elementor-motion-effects-layer,
 .lazyloaded > [class *= "-wrap"] > .elementor-motion-effects-container > .elementor-motion-effects-layer,
