--- a/assets/dev/scss/frontend/_container.scss
+++ b/assets/dev/scss/frontend/_container.scss
@@ -45,7 +45,7 @@
 	z-index: var( --z-index );
 	overflow: var( --overflow );
 	transition: background var(--background-transition, 0.3s), border var(--border-transition, 0.3s), box-shadow var(--border-transition, 0.3s), transform var(--e-con-transform-transition-duration, 0.4s);
-	transform: perspective( var(--e-con-transform-perspective, 0 ) )
+	transform: perspective( var(--e-con-transform-perspective, initial ) )
 		rotateZ( var(--e-con-transform-rotateZ, 0 ) )
 		rotateX( var(--e-con-transform-rotateX, 0 ) )
 		rotateY( var(--e-con-transform-rotateY, 0 ) )
