--- a/modules/tabs-v2/assets/scss/frontend.scss
+++ b/modules/tabs-v2/assets/scss/frontend.scss
@@ -46,6 +46,7 @@
 	--tabs-v2-title-border-radius: initial;
 	--tabs-v2-title-transition: 0.3s;
 
+  	--tabs-v2-icon-vertical-align: center;
 	--tabs-v2-icon-color: var( --e-global-color-secondary, var( --tabs-v2-color-secondary-fallback ) );
 	--tabs-v2-icon-color-hover: var( --tabs-v2-title-color-hover );
 	--tabs-v2-icon-color-active: #{$white};
@@ -70,12 +71,12 @@
 			justify-content: var( --tabs-v2-tabs-wrapper-justify-content );
 			gap: var( --tabs-v2-title-gap );
 		}
-	
+
 		&-content-wrapper {
 			flex-grow: 1;
 			padding: var( --tabs-v2-content-wrapper-padding );
 			border-radius: var( --tabs-v2-content-wrapper-border-radius );
-		}	
+		}
 	}
 
 	.elementor-tab {
@@ -94,7 +95,7 @@
 			outline: none;
 			padding-top: var( --tabs-v2-title-padding-top );
 			padding-right: var( --tabs-v2-title-padding-right );
-			padding-bottom: var( --tabs-v2-title-padding-bottom ); 
+			padding-bottom: var( --tabs-v2-title-padding-bottom );
 			padding-left: var( --tabs-v2-title-padding-left );
 			text-align: var( --tabs-v2-title-alignment );
 			border-radius: var( --tabs-v2-title-border-radius );
@@ -127,6 +128,7 @@
 
 			.elementor-tab-icon {
 				display: flex;
+			  	align-items: var( --tabs-v2-icon-vertical-align );
 
 				> i {
 					color: var( --tabs-v2-icon-color );
@@ -138,6 +140,7 @@
 
 				&,
 				&-active {
+				  	align-items: var( --tabs-v2-icon-vertical-align );
 
 					> i {
 						font-size: var( --tabs-v2-icon-size );
@@ -203,7 +206,7 @@
 	.elementor-widget-tabs-v2 {
 
 		.elementor-tabs {
-			
+
 			.elementor-tab-mobile-title {
 				display: none;
 			}
