Use CSS custom property instead of direct property

--- a/assets/dev/scss/frontend/widgets/video.scss
+++ b/assets/dev/scss/frontend/widgets/video.scss
@@ -54,6 +54,6 @@
 	> .elementor-widget-video {
 		// Fix - Video widget has an undefined height on mobile using 'flex column wrap' inside the flex container (ED-7604).
 		width: var( --container-widget-width );
-		flex-grow: var( --container-widget-flex-grow );
+		--flex-grow: var( --container-widget-flex-grow );
 	}
 }
