--- a/assets/dev/scss/frontend/widgets/divider.scss
+++ b/assets/dev/scss/frontend/widgets/divider.scss
@@ -143,6 +143,6 @@
 	& > .elementor-widget-divider {
 		// Fix - Divider widget has undefined width and height issues inside the flex container (ED-7722).
 		width: var( --container-widget-width );
-		flex-grow: var( --container-widget-flex-grow );
+		--flex-grow: var( --container-widget-flex-grow );
 	}
 }
