Add toggle when image is exist

--- a/assets/dev/scss/editor/_global.scss
+++ b/assets/dev/scss/editor/_global.scss
@@ -168,9 +168,10 @@ i.eicon-tilted {
 
 .media-dimensions {
 	margin-top: 15px;
+	display: none;
 }
 
-.elementor-control {
+.media-dimensions .elementor-control-field {
 	padding: 0px;
 }
 
