--- a/modules/lazyload/assets/scss/frontend.scss
+++ b/modules/lazyload/assets/scss/frontend.scss
@@ -1,3 +1,3 @@
-.lazyloaded, body.e-lazyload [data-e-bg-lazyload]:not(.lazyloaded ):first-of-type {
+body.e-lazyload .lazyloaded {
     background-image: var(--e-bg-lazyload) !important;
 }
