Dimensions only in BG control

--- a/assets/dev/scss/editor/_global.scss
+++ b/assets/dev/scss/editor/_global.scss
@@ -166,7 +166,7 @@ i.eicon-tilted {
 	transform: rotate(90deg);
 }
 
-.media-dimensions {
+.elementor-control .elementor-control-content.media-dimensions {
 	margin-top: 15px;
 	display: none;
 }
@@ -175,7 +175,7 @@ i.eicon-tilted {
 	padding: 0px;
 }
 
-.elementor-control-responsive-switchers {
+.media-dimensions .elementor-control-responsive-switchers {
 	display: none;
 }
 
