--- a/modules/lazyload/assets/scss/frontend.scss
+++ b/modules/lazyload/assets/scss/frontend.scss
@@ -1,3 +1,3 @@
 body.e-lazyload .lazyloaded {
-    background-image: var(--e-bg-lazyload) !important;
+    --e-bg-lazyload-loaded: var(--e-bg-lazyload);
 }
