--- a/assets/dev/scss/editor/_global.scss
+++ b/assets/dev/scss/editor/_global.scss
@@ -166,21 +166,27 @@ i.eicon-tilted {
 	transform: rotate(90deg);
 }
 
-.elementor-control .elementor-control-content.media-dimensions {
+.elementor-control .elementor-control-content.media-size {
 	margin-top: 15px;
 	display: none;
 }
 
-.media-dimensions .elementor-control-field {
+.media-size .elementor-control-field {
 	padding: 0px;
 }
 
-.media-dimensions .elementor-control-responsive-switchers {
+.media-size .elementor-control-responsive-switchers {
 	display: none;
 }
 
-#media-display-dimensions {
+.media-display-size.select {
 	padding-bottom: 0px;
 	width: 81%;
 	float: right;
+}
+
+.media-size-input-wrapper {
+	position: unset;
+    float: right;
+    width: 90%;
 }
